fix: partner logo covering slider

--- a/resources/scss/layouts/_partners-banner.scss
+++ b/resources/scss/layouts/_partners-banner.scss
@@ -24,6 +24,7 @@
         img {
             min-width: 2.5rem;
             height: 2rem;
+            object-fit: contain;
 
             @include for-tablet-landscape-up {
                 min-width: 5rem;
